<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:id="@+id/HostLayout"
    tools:context="com.isaac.buzzbuzzerapp.Hosting">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"

        android:id="@+id/longitudeTextV"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="109dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/latitudeTextV"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="122dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Host Party"
        android:id="@+id/hostButton"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />



    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/EditTextPartyName"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:hint="@string/party_name"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/EditTextPartyName"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/public_party"
            android:id="@+id/RB_public"
            android:layout_alignTop="@+id/latitudeTextV"
            android:layout_alignParentStart="true"
            android:checked="false"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/private_party"
            android:id="@+id/RB_private"
            android:layout_alignTop="@+id/latitudeTextV"
            android:layout_alignParentEnd="true"
            android:checked="true"
            android:onClick="onRadioButtonClicked"/>
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/testServerStuff"
        android:layout_centerHorizontal="true"
        android:layout_alignTop="@+id/longitudeTextV" />
</RelativeLayout>
